--- a/index.html
+++ b/index.html
@@ -159,17 +159,16 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
             </div>
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
-                    <p><span style="color:#25c5df; font-size:18px;"><b>SPONSORS</b></span> <br><br> 
+                    <p><span style="color:#25c5df; font-size:18px;"><b>COLLABORATORS</b></span> <br><br> 
                         <b>Milton-Parc Recreation Center<br></b>
                         One of our missions is to inform youth about mental well-being and local services, and in particular, we’re trying to reach out to neighbourhoods in Montreal that are of a lower socioeconomic status. To help us reach our goal, we are proud to work with the Milton Park Recreation Association (MPRA). In particular, we value and support MPRA’s mission which is “to bridge differences and bring people closer together by offering a wide variety of affordable courses and programs which contribute to individual growth and learning, and by building partnerships with individuals and organizations in the community to help achieve these objectives.”
 <br><br>MRPA has kindly offered us a venue at Galeries du Parc for all of our future workshops. We’re so glad to be able to work with this association to make mental health services more accessible to youth and increase awareness of local programs and services.
 For more information on the Milton Park Recreation Association, please visit <a href="http://www.miltonpark.org/" target="_blank">their <u>website</u></a>.</p>
-                        <b>Educational Sponsors</b><br>
-<p style="font-size:15px">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, visit the websites of:<br>
-<center><a href="https://monsteracademymtl.wordpress.com/" target="_blank"><u>Monster Academy</u></a><br>
-<a href="http://www.cmha.ca/" target="_blank"><u>Canadian Mental Health Organization</u></a><br>
-<a href="http://coco-net.org/" target="_blank"><u>COCo Montreal</u></a></p>
-                    <p><span style="color:#25c5df; font-size:18px; text-align:left"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
+                    <p><span style="color:#25c5df; font-size:18px; text-align:left"><b>SPONSORS</b></span> <br><br> 
+                    <p style="font-size:15px">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, click the logos to visit the websites of:<br>
+<center><a href="https://monsteracademymtl.wordpress.com/" target="_blank"><img src="./assets/img/Logo_MonsterAcademy.png"style="width: 200px; height:auto;"></img></a><br>
+<a href="http://www.cmha.ca/" target="_blank"><img src="./assets/img/Logo_CanadianMentalHealth.png" style="width: 200px; height:auto;"></img></a><br>
+<a href="http://coco-net.org/" target="_blank"><img src="./assets/img/Logo_Coco.png" style="width: 200px; height:auto;"></img></a></p></p>
                 </div>
                 </div>
         </div>
