--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
 <br><br>MRPA has kindly offered us a venue at Galeries du Parc for all of our future workshops. We’re so glad to be able to work with this association to make mental health services more accessible to youth and increase awareness of local programs and services.
 For more information on the Milton Park Recreation Association, please visit <a href="http://www.miltonpark.org/" target="_blank">their <u>website</u></a>.</p>
                     <p><span style="color:#25c5df; font-size:18px; text-align:left"><b>SPONSORS</b></span> <br><br> </p>
-                    <p style="font-size:15px">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, click the logos to visit the websites of:<br>
-<a href="https://monsteracademymtl.wordpress.com/" target="_blank"><img src="./assets/img/Logo_MonsterAcademy.png"style="width: 200px; height:auto;"></img></a><br>
-<a href="http://www.cmha.ca/" target="_blank"><img src="./assets/img/Logo_CanadianMentalHealth.png" style="width: 200px; height:auto;"></img></a><br>
+                    <p style="font-size:15px; text-align:center;">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, click the logos to visit the websites of:<br>
+<a href="https://monsteracademymtl.wordpress.com/" target="_blank"><img src="./assets/img/Logo_MonsterAcademy.png"style="width: 200px; height:auto;"></img></a>
+<a href="http://www.cmha.ca/" target="_blank"><img src="./assets/img/Logo_CanadianMentalHealth.png" style="width: 200px; height:auto;"></img></a>
 <a href="http://coco-net.org/" target="_blank"><img src="./assets/img/Logo_Coco.png" style="width: 200px; height:auto;"></img></a></p>
                 </div>
                 </div>
