--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
 <br><br>MRPA has kindly offered us a venue at Galeries du Parc for all of our future workshops. We’re so glad to be able to work with this association to make mental health services more accessible to youth and increase awareness of local programs and services.
 For more information on the Milton Park Recreation Association, please visit <a href="http://www.miltonpark.org/" target="_blank">their <u>website</u></a>.</p>
                     <p><span style="color:#25c5df; font-size:18px; text-align:left"><b>SPONSORS</b></span> <br><br> </p>
-                    <p style="font-size:15px; text-align:center;">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, click the logos to visit the websites of:<br>
+                    <p style="font-size:15px; text-align:center;">Thank you to Monster Academy, the Canadian Mental Health Organization, AMI Quebec and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, click the logos to visit the websites of:<br>
 <a href="https://monsteracademymtl.wordpress.com/" target="_blank"><img src="./assets/img/Logo_MonsterAcademy.png"style="width: 200px; height:auto;"></img></a>
 <a href="http://www.cmha.ca/" target="_blank"><img src="./assets/img/Logo_CanadianMentalHealth.png" style="width: 200px; height:auto;"></img></a>
-<a href="http://coco-net.org/" target="_blank"><img src="./assets/img/Logo_Coco.png" style="width: 200px; height:auto;"></img></a></p>
+<a href="http://coco-net.org/" target="_blank"><img src="./assets/img/Logo_Coco.png" style="width: 200px; height:auto;"></img></a>
+<a href="http://amiquebec.org/" target="_blank"><img src="./assets/img/Logo_Amiquebec.png" style="width: 200px; height:auto;"></img></a></p>
                 </div>
                 </div>
         </div>
@@ -187,6 +188,39 @@ For more information on the Milton Park Recreation Association, please visit <a 
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p>Part of Roots’ core mandate is to make mental health services more accessible to youth and increase their awareness of local programs and services. The following is a list of just a few of the many mental health resources available for youth in Montreal. Click their icon to read more about them. </p>
+            <div class="row" style="text-align:left;">
+                <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
+                    <div onclick="TINY.box.show({html:'Monster Academy',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Logo_MonsterAcademy" style="width: 100%; height: auto;"></img>
+                    </div>
+                    <div onclick="TINY.box.show({html:'AMI Quebec',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Logo_Amiquebec.png" style="width: 100%; height: auto;"></img>
+                    </div>
+                    <div onclick="TINY.box.show({html:'Head and Hands',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Resources_H&H.png" style="width: 100%; height: auto;"></img>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="text-align:left;">
+                <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
+                    <div onclick="TINY.box.show({html:'Tel-Jeunes',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
+                    </div>
+                    <div onclick="TINY.box.show({html:'Revivre',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Resource_Revivre.png" style="width: 100%; height: auto;"></img>
+                    </div>
+                    <div onclick="TINY.box.show({html:'Suicide Action Montreal',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Resources_SuicideAction.png" style="width: 100%; height: auto;"></img>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="text-align:left;">
+                <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
+                    <div onclick="TINY.box.show({html:'Vent over Tea',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                        <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
+                </div>
+            </div>
+                    
                 </div>
                 </div>
         </div>
