--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@ For more information on the Milton Park Recreation Association, please visit <a 
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'Monster Academy',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
-                        <img src="./assets/img/Logo_MonsterAcademy" style="width: 100%; height: auto;"></img>
+                        <img src="./assets/img/Logo_MonsterAcademy.png" style="width: 100%; height: auto;"></img>
                     </div>
                     <div onclick="TINY.box.show({html:'AMI Quebec',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/Logo_Amiquebec.png" style="width: 100%; height: auto;"></img>
                     </div>
                     <div onclick="TINY.box.show({html:'Head and Hands',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
-                        <img src="./assets/img/Resources_H&H.png" style="width: 100%; height: auto;"></img>
+                        <img src="./assets/img/Resource_H&H.png" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
                         <img src="./assets/img/Resource_Revivre.png" style="width: 100%; height: auto;"></img>
                     </div>
                     <div onclick="TINY.box.show({html:'Suicide Action Montreal',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
-                        <img src="./assets/img/Resources_SuicideAction.png" style="width: 100%; height: auto;"></img>
+                        <img src="./assets/img/Resource_SuicideAction.png" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
             </div>
