--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
                 </div>
             </div>
             <div class="row" style="text-align:left;">
+                <div class="col-md-10" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'THE DIALOGUE PROJECT 
                     The Dialogue Project is a series of 3 workshops hosted by Roots that will be held at Milton-Park Community Center in winter of 2016 and will aim to educate youth on themes related to student mental health. The main goal of the project is to enhance the dialogue and deepen the conversation on mental health among youth to eliminate the stigma that is associated with it. Rather than trivializing mental health, the workshops aim to promote understanding and awareness how mental health applies to everyone. It will provide an ongoing and interactive discussion on stigma, determinants of mental health, and issues of mental health that effect youth.',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program1_dialogue.jpg" style="width: 100%; height: auto;"></img>
@@ -184,10 +185,10 @@ For more information on the Milton Park Recreation Association, please visit <a 
                     <h3 style="text-align:left;">RESOURCES</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:left;">
+            <div class="row" style="padding:2px; text-align:left;">
                 <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p>Part of Roots’ core mandate is to make mental health services more accessible to youth and increase their awareness of local programs and services. The following is a list of just a few of the many mental health resources available for youth in Montreal. Click their icon to read more about them. </p>
-            <div class="row" style="text-align:center;">
+                </div>
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'Monster Academy',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
                         <img src="./assets/img/Logo_MonsterAcademy.png" style="width: 100%; height: auto;"></img>
@@ -199,8 +200,6 @@ For more information on the Milton Park Recreation Association, please visit <a 
                         <img src="./assets/img/Resource_H&H.png" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
-            </div>
-            <div class="row" style="text-align:center;">
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'Tel-Jeunes',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
                         <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
@@ -212,16 +211,12 @@ For more information on the Milton Park Recreation Association, please visit <a 
                         <img src="./assets/img/Resource_SuicideAction.png" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
-            </div>
-            <div class="row" style="text-align:center;">
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'Vent over Tea',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
                         <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
+                    </div>
                 </div>
             </div>
-                    
-                </div>
-                </div>
         </div>
     </section>
 <!--FOOTER-->
