--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
 ',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program2_yop.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK)
-                    More details coming soon!',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK) <br /> More details coming soon!',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program3_smalltalk.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
