--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; ">
                 </div>
                 <div class="col-lg-offset-3 col-md-offset-3" style="padding:0px; height:350px; background-color:white;">
-                        <img src="banner.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
+                        <img src="./assets/img/banner.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
         </div>
