--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
                 <div class="col-lg-3 col-md-3" style="padding:0px; height:350px; background-color:white;">
-                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; ">
+                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; padding-top: 20px;">
                 </div>
                 <div class="col-lg-offset-3 col-md-offset-3" style="padding:0px; height:350px; background-color:white;">
-                        <img src="./assets/img/banner.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
+                        <img src="./assets/img/banner.jpg" alt="Quote Collage" style="overflow:hidden; width:auto; height:100%;">
                 </div>
             </div>
         </div>
