--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
                 <div class="col-lg-3 col-md-3" style="padding:0px; height:350px; background-color:white;">
-                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; padding-top: 20px;">
+                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; padding-top: 20px; padding-left:2px;">
                 </div>
                 <div class="col-lg-offset-3 col-md-offset-3" style="padding:0px; height:350px; background-color:white;">
                         <img src="./assets/img/banner.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%; padding-top:1px;">
@@ -88,7 +88,7 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <div class="row" style:"padding:2px; display:inline;">
+            <div class="row" style:"padding:2px; padding-top:10px; display:inline;">
                 <div class="col-lg-9 col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0; color:white;">
                     <h3 style="text-align:left;">ABOUT</h3>
                 </div>
