--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ In order to reach these goals, mentors visit the youth once a week for approxima
                     </div>
                 </div>
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
-                    <div onclick="TINY.box.show({html:'Vent over Tea <br /><br />Vent Over Tea is a Montreal-based, volunteer-run listening service aiming to provide a casual, confidential and non-judgmental outlet for members of our community. Founded in 2015, our program is based on studies that have shown the benefits derived from expressing one's self to a compassionate listener. We do not offer counselling, psychotherapy or advice. We provide you with a listening ear and a safe space to vent. Our volunteers are trained in active listening and will help you work through your problems by asking reflective questions and and showing empathetic regard. Sometimes we feel trapped in our situations and don't feel as if there is anyone in our life to whom we can speak with. That\'s where we come in. We are the friend you haven\'t met before; a fresh pair of ears to your story.<br  /><br  />For more info: http://ventovertea.wix.com/vent',width:500,height:300,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
+                    <div onclick="TINY.box.show({html:'Vent for Tea',width:500,height:300,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
                         <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
