--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -77,7 +77,7 @@
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
                 <div class="col-lg-3 col-md-3" style="padding:0px; height:350px; background-color:white;">
-                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; padding: 20px 0px 0px 5px;">
+                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; padding: 40px 0px 0px 5px;">
                 </div>
                 <div class="col-lg-offset-3 col-md-offset-3" style="padding:0px; height:350px; background-color:white;">
                         <img src="./assets/img/banner.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%; padding-top:1px;">
@@ -219,7 +219,7 @@ In order to reach these goals, mentors visit the youth once a week for approxima
                 </div>
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div onclick="TINY.box.show({html:'Vent over Tea <br /><br />Vent Over Tea is a Montreal\-based, volunteer\-run listening service aiming to provide a casual, confidential and non\-judgmental outlet for members of our community. Founded in 2015, our program is based on studies that have shown the benefits derived from expressing one\'s self to a compassionate listener. We do not offer counselling, psychotherapy or advice. We provide you with a listening ear and a safe space to vent. Our volunteers are trained in active listening and will help you work through your problems by asking reflective questions and and showing empathetic regard. Sometimes we feel trapped in our situations and don\'t feel as if there is anyone in our life to whom we can speak with. That\'s where we come in. We are the friend you haven\'t met before\; a fresh pair of ears to your story.<br  /><br  />For more info: http://ventovertea.wix.com/vent',width:700,height:300,opacity:20,topsplit:3})" class="col-md-3" style="padding:0.5px; width: 33.3%">
-                        <img src="./assets/img/Resource_TJ.png" style="width: 100%; height: auto;"></img>
+                        <img src="./assets/img/Logo_VentTea.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
             </div>
