--- a/committee.html
+++ b/committee.html
@@ -1,20 +1,146 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="Tong Niu" content="Demo Site for Roots 2016">
+
+    <title>Roots 2016</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" >
+
+    <!-- Navigation -->
+    <div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top" style="color:white;">ROOTS</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse" style="color:white;">
+                <ul class="nav navbar-nav" >
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about" style="color:white;">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#programs" style="color:white;">Programs</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#sponsors" style="color:white;">Sponsors</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#resources" style="color:white;">Resources</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+</div>
+<--Committee Section-->
 <section id="committee">
     <div class="container">
             <br><br><br><br>
-              <p> Bios: </p>
-              <p>ANIKA:
+              <p> 2016 Committee: </p><br>
+              <p><b>ANIKA:</b>
 Anika Atique is a 4th year Anatomy and Cell Biology major at McGill University. When she first moved to Montreal from Bangladesh to start her undergraduate education she felt the need to be useful, not just through her education, but also to give back to her community. She has always had a passion for social justice, health care and education and joined Roots because it combined all these passions into one common goal.
-</p>
-<p>JAHANARA: 
+</p><br>
+<p><b>JAHANARA:</b> 
 Jahanara Rajwani is currently a third year student at McGill University, studying Honours Immunology. She hopes to pursue a career in research someday, but remains interested in youth literacy and mental health initiatives. Jahanara and her co-founders created Roots: Youth Mental Health Alliance as a student run initiative aiming to eliminate the stigma and socioeconomic barriers that prevent youth in Montreal from easily accessing mental health services. It is a two-part outreach program that aims to educate and spread awareness through on-campus mental health seminars as well as workshops conducted in lower income regions of Montreal.
-</p>
-<p>AMYNA:
+</p><br>
+<p><b>AMYNA:</b>
 Amyna Kanji is currently a first year Masters student in the MA PhD Clinical Psychology program at Concordia University. She completed her Undergraduate degree in Psychology, and Social Studies of Medicine at McGill University in 2014. Throughout her life, Amyna has always had a strong passion for travelling, making connections and giving back to the global community. She is excited to embark upon the Roots journey with an extremely talented, passionate and humble group of individuals. 
-</p>
-<p>RUCHI: 
+</p><br>
+<p><b>RUCHI:</b> 
 Ruchi Sharan is a third year Anatomy and Cell Biology major at McGill University with a minor in Psychology. Ruchi and her co-founder created Roots with the aim to empower youth to eliminate the stigma associated with mental illness and create a platform that encourages discussion to better understand what mental health encompasses. She believes that Roots integrates her passion for psychology and public health with her aspiration to make a change in people’s lives. Ruchi hopes to one day pursue a career in psychiatry.
 </p>
 </div>
 </section>
+
+</--Committee>
+
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-offset-2 col-md-8">
+                        <h3>Around the Web</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Copyright &copy; Roots 2015
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+    <script type="text/javascript" src="./js/tinybox.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+
+</body>
+
+</html>
