--- a/committee.html
+++ b/committee.html
@@ -51,19 +51,19 @@
                 <ul class="nav navbar-nav" >
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
+                        <a class="page-scroll" href="./index.html#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about" style="color:white;">About</a>
+                        <a class="page-scroll" href="./index.html#about" style="color:white;">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#programs" style="color:white;">Programs</a>
+                        <a class="page-scroll" href="./index.html#programs" style="color:white;">Programs</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors" style="color:white;">Sponsors</a>
+                        <a class="page-scroll" href="./index.html#sponsors" style="color:white;">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resources" style="color:white;">Resources</a>
+                        <a class="page-scroll" href="./index.html#resources" style="color:white;">Resources</a>
                     </li>
                 </ul>
             </div>
