--- a/committee.html
+++ b/committee.html
@@ -76,7 +76,7 @@
 <section id="committee">
     <div class="container">
             <br><br><br><br>
-              <p> 2016 Committee: </p><br>
+              <h1> 2016 Committee </h1><br>
               <p><b>ANIKA:</b>
 Anika Atique is a 4th year Anatomy and Cell Biology major at McGill University. When she first moved to Montreal from Bangladesh to start her undergraduate education she felt the need to be useful, not just through her education, but also to give back to her community. She has always had a passion for social justice, health care and education and joined Roots because it combined all these passions into one common goal.
 </p><br>
