--- a/committee.html
+++ b/committee.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top" style="color:white;">ROOTS</a>
+                <a class="navbar-brand page-scroll" href="index.html#page-top" style="color:white;">ROOTS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
