--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
                     <div onclick="TINY.box.show({html:'YOUTH OUTREACH PROGRAM COLLABORATION <br /><br /> Roots is pleased to announce its new collaboration with Youth Outreach Program (YOP) at McGill. This collaboration will allow us to deliver short, interactive workshops about mental health and self-care to youth in juvenile detention centers around Montreal. Roots facilitators will be holding workshops for YOP volunteers on facilitation and mental health education in order to equip them to educate the youth that they already work with at the detention centers.',width:500,height:250,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program2_yop.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK) <br /> More details coming soon!',width:400,height:100,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK) <br /><br /> More details coming soon!',width:400,height:150,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program3_smalltalk.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
